--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,23 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
+  flutter_riverpod: ^2.4.5
+  freezed_annotation: ^2.4.1
+  auto_route: ^7.8.4
+  google_fonts: ^6.1.0
+  connectivity_plus: ^5.0.1
+  responsive_framework: ^1.1.1
+  dio: ^5.3.3
+  flutter_secure_storage: ^9.0.0
+  get_it: ^7.6.4
+  injectable: ^2.3.2
+  injectable_generator: ^2.4.1
+  freezed: ^2.4.5
+  logger: ^2.0.2+1
+  pretty_dio_logger: ^1.3.1
+  flutter_dotenv: ^5.1.0
+  flutter_hooks: ^0.20.3
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +61,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.6
+  auto_route_generator: ^7.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
